# genibot

./: .default.env  .gitignore  main.py  pyproject.toml  readme.org
genibot/: __init__.py  client.py
tests/: test_basic.py  test_initialization.py
