[tool.poetry]
name = "genibot"
version = "0.1.0"
description = "a twitter bot to create amazing art"
authors = ["Diego Rodriguez <diego.vincent.rodriguez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
